# redust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: redust.yml  rust.yml
benches/: benchmark.rs
benches/criterion/cmd_group/get/base/: estimates.json  tukey.json
benches/criterion/cmd_group/get/change/: estimates.json
benches/criterion/cmd_group/get/new/: benchmark.json  raw.csv  sample.json
benches/criterion/cmd_group/get/report/: index.html
benches/criterion/cmd_group/report/: index.html
benches/criterion/cmd_group/set/base/: benchmark.json  estimates.json
benches/criterion/cmd_group/set/change/: estimates.json
benches/criterion/cmd_group/set/new/: raw.csv  sample.json  tukey.json
benches/criterion/cmd_group/set/report/: index.html
benches/criterion/report/: index.html
docs/: README.md
docs/ADRs/: ADR-01-Using_Rust.md  ADR-02-Data_Structures.md  ADR-03-Concurrency.md  README.md
src/: connection.rs  data_store.rs  lib.rs  protocol_handler.rs  server.rs
src/cmd/: decr.rs  del.rs  echo.rs  exists.rs  get.rs  incr.rs  lpush.rs  lrange.rs  mod.rs  ping.rs  rpush.rs  set.rs
tests/: test_cmd_execute_mocked.rs  test_cmd_integration.rs  test_cmds.rs  test_protocol_handler.rs
