[package]
name = "redust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.26" }
async-trait = "0.1.73"
mockall = "0.11.4"
predicates = "2.1.5"

[dev-dependencies]
rstest = "0.18.1"
redis = "0.23.2"